Fix home page priorites region alignment

--- a/bvspca/static/sass/components/_page-home.scss
+++ b/bvspca/static/sass/components/_page-home.scss
@@ -83,17 +83,16 @@ $priorities-break: 600px;
 .home-priorities-section {
   @include container-wide;
   margin-top: 4.5rem;
-  margin-bottom: 4.5rem;
+  margin-bottom: 4rem;
 }
 
 .home-priorities {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-content: center;
+  align-items: center;
   @media (min-width: $priorities-break) {
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
   }
 }
